--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1>
-  {{title}}
+  <ul>
+    <li><a [routerLink] = "['/about']">about</a></li>
+    <li><a [routerLink] = "['/form']">Inscriptions</a></li>
+  </ul>
+  <router-outlet></router-outlet>
 </h1>
+
