--- a/src/app/home/app.component.html
+++ b/src/app/home/app.component.html
@@ -1,8 +1,10 @@
-<h1>
   <ul>
     <li><a [routerLink] = "['/about']">about</a></li>
     <li><a [routerLink] = "['/form']">Inscriptions</a></li>
   </ul>
   <router-outlet></router-outlet>
-</h1>
 
+<form #searchGame="ngForm" onsubmit="searchGames(searchGame.value)">
+<input type="text" name="nameGame" placeholder="search game" ngModel /> 
+
+</form>
