--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,10 +4,11 @@
           <h3 class="panel-title">Inscription</h3>
         </div>
         <div class="panel-body center">
-<form>
+          <div class="col-xs-6">
+<form (onSubmit)="signup()" [formGroup]="formGroupSignup">
         <div class="form-group">
           <label for="exampleInputEmail1">Nom :</label>
-          <input type="Text" class="form-control" id="nom" placeholder="nom">
+          <input type="Text" formControlName = "name"class="form-control" id="nom" placeholder="nom" >
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Prenom :</label>
@@ -42,8 +43,12 @@
           <input type="file" id="exampleInputFile">
         </div>
         
-        <button type="submit" class="btn btn-default">m'inscrire</button>
+        <button type="submit" class="btn btn-primary">m'inscrire</button>
       </form>
+          </div>
+          <div class="col-xs-6">
+            <span class="text-danger" [hidden]="formGroupSignup.controls.name.valid" >erreur</span>
+          </div>
     </div>
 </div>
       
