refont page home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,16 @@
   <!-- Main component for a primary marketing message or call to action -->
-  <div class="jumbotron">
-      <h1>Navbar example</h1>
-      <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-      <p>To see the difference between static and fixed top navbars, just scroll.</p>
-      <p>
-        <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-      </p>
-    </div>
+  <div class="centered-search">
+    <div class="row centered">
+    <div class="col-lg-12">
+      <h1>Trouver des milliers <br /> 
+        de jeux à échanger.</h1>
+      <form class="form-inline" role="form">
+        <div class="form-group">
+          <input type="text" class="form-control search-main" id="exampleInputEmail1" placeholder="Chercher un jeu">
+        </div>
+        <button type="submit" class="btn btn-warning btn-lg">Recherche</button>
+      </form>	
+    </div><!-- /col-lg-6 -->
+    
+  </div><!-- /row -->
+  </div>
