--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,7 @@
  */
 
 body {
-  background-color: #f2f2f2;
+    background-color: #f2f2f2;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 16px;
@@ -111,7 +111,8 @@ a:after {
 .search-main.form-control  {
 	height: 42px;
 	font-size: 18px;
-	width: 280px;
+    width: 228px;
+    text-align: center;
 }
 
 i {
