--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,3 +1,3 @@
-.ng-valid { border-color: green; }
+/*.ng-valid { border-color: green; }
 .ng-invalid { border-color: red; } 
-.ng-pristine{border-color: green;}
+.ng-pristine{border-color: green;}*/
