--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -47,7 +47,7 @@
 <div class="form-group">
     <div class="form-group has-feedback" [ngClass]="{'has-error':!formGroupSignup.controls.mail.valid && formGroupSignup.controls.mail.value.length >0,'has-success':formGroupSignup.controls.mail.valid && formGroupSignup.controls.mail.value.length >0}">                
       <label > Addresse mail:</label>
-      <input type="mail" class="form-control" formControlName="mail" placeholder="Date de naissance">
+      <input type="mail" class="form-control" formControlName="mail" placeholder="addresse mail">
       <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true" *ngIf="formGroupSignup.controls.mail.valid && formGroupSignup.controls.mail.value.length >0"></span>
       <span class="glyphicon glyphicon-remove  form-control-feedback" aria-hidden="true" *ngIf="!formGroupSignup.controls.mail.valid && formGroupSignup.controls.mail.value.length >0"></span>  
   </div>
