--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,2 @@
-  <!-- Main component for a primary marketing message or call to action -->
-<div class="centered-search">
-    <div class="row centered">
-      <div class="col-lg-12">
-      <h1>Trouver des milliers <br /> 
-        de jeux à échanger.</h1>
-      <form class="form-inline" role="form">
-        <div class="form-group">
-          <input type="text" class="form-control" id="exampleInputEmail1"
-          placeholder="Chercher un jeu">
-        </div>
-          <button type="submit" class="btn btn-warning btn-lg">Recherche</button>
-      </form>
-    </div>
-  </div><!-- /row -->
-</div>
+<search></search>
+  
