--- a/src/app/searchGame/searchGames.component.html
+++ b/src/app/searchGame/searchGames.component.html
@@ -9,7 +9,8 @@
           de jeux à échanger.</h1>
         <form class="form-inline" role="form">
           <div class="form-group">
-            <ng2-completer [(ngModel)]="searchStr" [datasource]="dataService" [minSearchLength]="0"></ng2-completer>
+            <input type="text" class="form-control" id="exampleInputEmail1"
+            placeholder="Chercher un jeu">
           </div>
             <button type="submit" class="btn btn-warning btn-lg">Recherche</button>
         </form>
