--- a/src/app/searchGame/searchGames.component.html
+++ b/src/app/searchGame/searchGames.component.html
@@ -1,19 +1,20 @@
 
-<h1>Search color</h1>
-<ng2-completer [(ngModel)]="searchStr" [datasource]="dataService" [minSearchLength]="0"></ng2-completer>
 
-<!-- <div class="centered-search">
+<div class="centered-search">
       <div class="row centered">
         <div class="col-lg-12">
         <h1>Trouver des milliers <br /> 
           de jeux à échanger.</h1>
-        <form class="form-inline" role="form">
-          <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputEmail1"
-            placeholder="Chercher un jeu">
+        
+          <div class="form-group col-xs-3 col-xs-push-4 ">
+            <ng2-completer [(ngModel)]="searchStr"  [inputClass]="['form-control']" [ngModelOptions]="{standalone: true}" [datasource]="dataService" [minSearchLength]="0"></ng2-completer>
+
           </div>
-            <button type="submit" class="btn btn-warning btn-lg">Recherche</button>
-        </form>
+          <div >
+              <button type="submit" class="btn btn-warning btn-lg">Recherche</button>
+              
+            </div>
+       
       </div>
     </div> 
-  </div> -->
+  </div> 
