--- a/src/app/signupModal/signupModal.component.html
+++ b/src/app/signupModal/signupModal.component.html
@@ -3,6 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h1>Inscription</h1>
             </div>
             <div class="modal-body">
                 <signup></signup>
