--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,62 +1,25 @@
+<div class="search-results"
+infinite-scroll
+[infiniteScrollDistance]="2"
+[infiniteScrollThrottle]="300"
+(scrolled)="onScroll()">
 <div class="page">
     <h3>Résultat de la recherche :</h3>
     <div class="listGames">
-        <div class="game" onclick="alert(this)" style="cursor:pointer">
-            <div class="thumb">
-                <img src="https://static.gamespot.com/uploads/scale_tiny/1197/11970954/3245560-fifa.jpg">
-            </div>
-            <div class="informations">
-                <div class="titleGame">FIFA 18</div>
-                <div class="description">LoremIpsum coucou couzkdj doe doud edeud eodeodue dieodueo
-                    deodeide
-                    dedeoieefefêfeof pef oefoei foieofepf efef ef klejfkef kjef kj
-                </div>
-                <span><b>Date release :</b> 18/01/2017</span>
-            </div>
-        </div>
-        <hr class="style-two" />
-        <div class="game">
-                <div class="thumb">
-                    <img src="https://static.gamespot.com/uploads/scale_tiny/1197/11970954/3245560-fifa.jpg">
-                </div>
-                <div class="informations">
-                    <div class="titleGame">FIFA 18</div>
-                    <div class="description">LoremIpsum coucou couzkdj doe doud edeud eodeodue dieodueo
-                        deodeide
-                        dedeoieefefêfeof pef oefoei foieofepf efef ef klejfkef kjef kj
-                    </div>
-                    <span><b>Date release :</b> 18/01/2017</span>
-                </div>
-            </div>
-            <hr class="style-two" />
-            <div class="game">
+            <div class="game" (click)="alert(this)" style="cursor:pointer" *ngFor="let game of games">
                     <div class="thumb">
-                        <img src="https://static.gamespot.com/uploads/scale_tiny/1197/11970954/3245560-fifa.jpg">
+                        <img src="https://besthqwallpapers.com/Uploads/11-7-2017/16367/thumb-fifa-18-logo-2017-games-football-simulator.jpg">
                     </div>
                     <div class="informations">
-                        <div class="titleGame">FIFA 18</div>
-                        <div class="description">LoremIpsum coucou couzkdj doe doud edeud eodeodue dieodueo
-                            deodeide
-                            dedeoieefefêfeof pef oefoei foieofepf efef ef klejfkef kjef kj
-                        </div>
-                        <span><b>Date release :</b> 18/01/2017</span>
+                        <div class="titleGame">{{game.name}}</div>
+                        <div class="description">{{game.summary}}</div>
+                        <span><b>Date release :</b> {{game.first_release_date}}</span>
                     </div>
                 </div>
-                <hr class="style-two" />
-                <div class="game">
-                        <div class="thumb">
-                            <img src="https://static.gamespot.com/uploads/scale_tiny/1197/11970954/3245560-fifa.jpg">
-                        </div>
-                        <div class="informations">
-                            <div class="titleGame">FIFA 18</div>
-                            <div class="description">LoremIpsum coucou couzkdj doe doud edeud eodeodue dieodueo
-                                deodeide
-                                dedeoieefefêfeof pef oefoei foieofepf efef ef klejfkef kjef kj
-                            </div>
-                            <span><b>Date release :</b> 18/01/2017</span>
-                        </div>
-                    </div>
+                
+            <hr class="style-two" />
         
     </div>
 
+</div>
 </div>
