--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-        <alert class="text-center"></alert>
-          <form class="form-horizontal" [formGroup]="formGroupLogin" (ngSubmit)="login(formGroupLogin.value)" >
+              <div #alert></div>
+              <form class="form-horizontal" [formGroup]="formGroupLogin" (ngSubmit)="login(formGroupLogin.value)" >
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-6">
                     <div class="form-group">
