--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-              <div #alert></div>
+              <div #alert><alert></alert></div>
               <form class="form-horizontal" [formGroup]="formGroupLogin" (ngSubmit)="login(formGroupLogin.value)" >
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-6">
