--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" data-toggle="modal" data-target="#signupModal">Inscription</a></li>
+          <li><a  routerLink="/signup" routerLinkActive="active">Inscription</a></li>
           <li><a href="#" data-toggle="modal" data-target="#loginModal">Connexion</a></li>
         </ul>
         <form class="navbar-form navbar-right inline-form">
