--- a/src/app/login/loginModal/loginModal.component.html
+++ b/src/app/login/loginModal/loginModal.component.html
@@ -1,16 +1,14 @@
+ 
  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h1 class="modal-title">Connexion</h1>
-          </div>
+            <!--<div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              </div>-->
           <div class="modal-body">
               <login></login>
           </div>
-          <div class="modal-footer">
-            <a href="/signup" class="pull-left">vous n'etes pas encore inscrits ?</a>
-          </div>
+          
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
