--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -66,7 +66,15 @@
                             </div>
                         </div>
                         <div class="user-btm-box">
-                            <button class="btn btn-success">Modifier ma photo de profile</button>
+                            <image-upload [max]="1" 
+                            [extensions]="['jpeg','png','jpg']"
+                            buttonCaption="modifier profil"
+                            dropBoxMessage="glissez la photo"
+                            clearButtonCaption="annuler">
+                            
+                            >
+
+                            </image-upload>
                             
                         </div>
                     </div>
