--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="panel panel-info" >
     <div class="panel-heading">
         <div class="panel-title">Connexion</div>
-            <div style="float:right; font-size: 80%; position: relative; top:-10px">
+            <div class="mdp-oublie">
               <a href="#">mot de passe oublié?</a>
             </div>
         </div>     
