--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,4 +36,9 @@
     <router-outlet></router-outlet>
 
 </div> <!-- /container -->
+<div class="flex-container-bottom">
+    <footer class="main_footer">
+
+      </footer>
+	</div>
 <loginModal></loginModal>
