--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,9 +36,8 @@
     <router-outlet></router-outlet>
 
 </div> <!-- /container -->
-<div class="flex-container-bottom">
-    <footer class="main_footer">
-
-      </footer>
-	</div>
+<div class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container">
+  </div>
+</div>
 <loginModal></loginModal>
