--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,144 +1,27 @@
-<div id="wrapper">
-    <!-- Left navbar-header -->
-    <nav class="navbar navbar-fixed-left navbar-inverse sidebar" role="navigation">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <!--<div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>-->
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            
-            <div class="collapse navbar-collapse custom-sidebar" id="bs-sidebar-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li ><a href="#">Profile<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span></a></li>
-                    <li ><a href="#">Messages<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-envelope"></span></a></li>
-                    <li ><a href="#">Mes jeux<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-envelope"></span></a></li>
-                    <li ><a href="#">Historique<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-envelope"></span></a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
-                        <ul class="dropdown-menu forAnimate" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div class="main">
-    <!-- Content Here -->
-    </div>
-    <!-- Left navbar-header end -->
-    <!-- Page Content -->
-    <div id="page-wrapper">
-        <div class="container-fluid">
-            <div class="row bg-title">
-                <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-                    <h4 class="page-title">Profile page</h4> </div>
-                <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12"> 
-                    <ol class="breadcrumb">
-                        <li><a href="#">Dashboard</a></li>
-                        <li class="active">Profile page</li>
-                    </ol>
-                </div>
-            </div>
-            <!-- /.row -->
-            <!-- .row -->
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12">
+        <div class="well well-sm">
             <div class="row">
-                <div class="col-md-4 col-xs-12">
-                    <div class="white-box">
-                        <div class="user-bg"> <img width="100%" alt="user" src="./css/genu.jpg">
-                            <div class="overlay-box">
-                                <div class="user-content">
-                                    <a href="javascript:void(0)"><img src="./css/genu.jpg" class="thumb-lg img-circle" alt="img"></a>
-                                    <h4 class="text-white">User Name</h4>
-                                    <h5 class="text-white">info@myadmin.com</h5> </div>
-                            </div>
-                        </div>
-                        <div class="user-btm-box">
-                            <image-upload [max]="1" 
-                            [extensions]="['jpeg','png','jpg']"
-                            buttonCaption="modifier profil"
-                            dropBoxMessage="glissez la photo"
-                            clearButtonCaption="annuler">
-                            >
-
-                            </image-upload>
-                            
-                        </div>
-                    </div>
+                <div class="col-sm-6 col-md-2">
+                    <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive" />
                 </div>
-                <div class="col-md-8 col-xs-12">
-                    <div class="white-box">
-                        <form class="form-horizontal form-material">
-                            <div class="form-group">
-                                <label class="col-md-12">Nom</label>
-                                <div class="col-md-12">
-                                    <input type="text" placeholder="Johnathan Doe" class="form-control form-control-line"> 
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-12">Prénom</label>
-                                <div class="col-md-12">
-                                    <input type="text" placeholder="Johnathan Doe" class="form-control form-control-line"> 
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="example-email" class="col-md-12">Addresse</label>
-                                <div class="col-md-12">
-                                    <input type="text" placeholder="johnathan@admin.com" class="form-control form-control-line" name="example-email" id="example-email"> 
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-12">code Postal</label>
-                                <div class="col-md-12">
-                                    <input type="text" value="password" class="form-control form-control-line"> 
-                                </div>
-                           </div>
-                            <div class="form-group">
-                                <label class="col-md-12">Date de naissance</label>
-                                <div class="col-md-12">
-                                    <input type="date" placeholder="123 456 7890" class="form-control form-control-line"> 
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-12">Addresse mail</label>
-                                <div class="col-md-12">
-                                    <input type="email" placeholder="123 456 7890" class="form-control form-control-line">
-                                 </div>
-                            
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-12">Mot de passe</label>
-                                <div class="col-md-12">
-                                    <input type="email" placeholder="123 456 7890" class="form-control form-control-line"> 
-                                </div>
-                                
-                            </div>
-                
-                            <div class="form-group">
-                                <div class="col-sm-12">
-                                    <button class="btn btn-success">Modifier mon Profile</button>
-                                </div>
-                            </div>
-                        </form>
+                <div class="col-sm-6 col-md-8">
+                    <h4>
+                        Bhaumik Patel</h4>
+                    <small><cite title="San Francisco, USA">San Francisco, USA <i class="glyphicon glyphicon-map-marker">
+                    </i></cite></small>
+                    <p>
+                        <i class="glyphicon glyphicon-envelope"></i>email@example.com
+                        <br />
+                        <i class="glyphicon glyphicon-globe"></i><a href="http://www.jquery2dotnet.com">www.jquery2dotnet.com</a>
+                        <br />
+                        <i class="glyphicon glyphicon-gift"></i>June 02, 1988</p>
+                    <!-- Split button -->
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary">
+                            Edit</button>
                     </div>
                 </div>
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
     </div>
-    <!-- /#page-wrapper -->
-</div>
-<!-- /#wrapper -->
