--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -5,11 +5,16 @@ body {
   }
 
 
-  .navbar-nav > li > a, .navbar-brand {
+.navbar-nav > li > a, .navbar-brand {
     padding-top:12px !important; 
     padding-bottom:0 !important;
     height: 45px;
 }
+
+.navbar-default{
+    background-color: #ffffff;
+}
+
 .navbar {min-height:45px !important;}
 .navbar-header form {
   position: absolute;
