--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,15 +1,11 @@
-<p>
-  Angular 2 Seed is a starter project that implements best practices in
-  coding, building and testing Angular 2 apps.
-<p>
 
-<h2>Features</h2>
-<ul>
-  <li>Ready to go, statically typed build system using Gulp for working with TypeScript.</li>
-  <li>Production and development builds.</li>
-  <li>Sample unit tests with Jasmine and Karma including code coverage via Istanbul.</li>
-  <li>End-to-end tests with Protractor.</li>
-  <li>Development server with live reload.</li>
-  <li>TypeScript definition management using Typings.</li>
-  <li>Basic Service Worker, which implements "Cache then network strategy".</li>
-</ul>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-3">ShareGames</h1>
+      <p class="lead">Etant des joueurs de jeux vidéos,
+          on arrive à se lasser assez rapidement d'un jeu qu'on possède. 
+          Et le but de notre application, c'est de créer une communauté de joueurs pour différentes plateformes 
+          (Playstation, Xbox, PC ...) les mettre en relation et leurs permettre l'échange de jeux vidéos au sein. 
+         Tout ça en proposant une interface agréable et facile d'utilisation.</p>
+    </div>
+  </div>
