--- a/src/app/profile/css/profile.component.css
+++ b/src/app/profile/css/profile.component.css
@@ -1,164 +1,107 @@
-body,html{
-    height: 100%;
+.full-width{
+    float:left;width:100%;margin-top:30px;min-height:100px;position:relative;
 }
-
-/* remove outer padding */
-.main .row{
-    padding: 0px;
-    margin: 0px;
+.form-style-fake{position:absolute;top:0px;}
+.form-style-base{position:absolute;top:0px;z-index: 999;opacity: 0;}
+.imgCircle{border-radius: 50%;}
+.form-control{padding: 10px 50px;}
+.form-input{height:50px;border-radius: 0px;margin-top: 20px;}
+.Profile-input-file{
+    height:180px;width:180px;left:33%;
+    position: absolute;
+    top: 0px;
+    z-index: 999;
+    opacity: 0 !important;
 }
-
-.navbar-inverse{
-    border-color: transparent;    
-    border:0px;
-    border-radius: 10px;
+.mg-auto{
+    margin:0 auto;max-width: 200px;overflow: hidden;
 }
-
-.custom-sidebar{
-    background-color: #fff;
-    border:0px;
+.fake-styled-btn{
+    background: #006cad;
+    padding: 10px;
+    color: #fff;
 }
-
-/*Remove rounded coners*/
-
-nav.sidebar.navbar {
+#main-input{width:250px;}
+.input-place{
+    position: absolute;top:35px;left: 20px;font-size:23px;color:gray;}
+.margin{margin-top:10px;margin-bottom:10px;}
+.truncate {
+    width: 250px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.bg-form{
+    float:left;width:100%;
+    position:relative;
+    background: url("http://lorempixel.com/200/200/abstract/");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 0px;
+}
+.bg-transparent{
+    background: rgba(0,0,0,0.5);float: left;
+    width: 100%;margin-top: 0px;
+}
+.container{
+    background: url("http://lorempixel.com/800/800/nature/");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.custom-form{float: left;width:100%;border-radius: 20px;box-shadow: 0 0 16px #fff;overflow: hidden;
+background: rgba(255,255,255,0.6);
+}
+.img-section{
+    float: left;width: 100%;padding-top: 15px;padding-bottom: 15px;background: rgba(0,0,0,0.7);position: relative;
+}
+.img-section h4{color:#fff;}
+#PicUpload{
+    color: #ffffff;
+    width: 180px;
+    height: 180px;
+    background: rgba(255,255,255,0.4);
+    padding: 100px;
+    position: absolute;
+    left: 30.5%;
+    border-radius: 50%;
+    display: none;
+    top:15px;
+}
+.camera{
+    font-size: 50px;
+    color: #333;
+}
+.custom-btn{
+    margin-top: 15px;
     border-radius: 0px;
+    padding: 10px 60px;
+    margin-bottom: 15px;
+}
+#checker{
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    cursor: pointer;
+}
+.color{
+    color:#fff;
 }
 
-nav.sidebar, .main{
-    -webkit-transition: margin 200ms ease-out;
-    -moz-transition: margin 200ms ease-out;
-    -o-transition: margin 200ms ease-out;
-    transition: margin 200ms ease-out;
+/*====== style for placeholder ========*/
+
+.form-control::-webkit-input-placeholder {
+    color:lightgray;
+    font-size:18px;
 }
-
-/* Add gap to nav and right windows.*/
-.main{
-    padding: 10px 10px 0 10px;
+.form-control:-moz-placeholder {
+    color:lightgray;
+    font-size:18px;
 }
-
-/* .....NavBar: Icon only with coloring/layout.....*/
-
-/*small/medium side display*/
-@media (min-width: 768px) {
-
-    /*Allow main to be next to Nav*/
-    .main{
-        position: absolute;
-        width: calc(100% - 40px); /*keeps 100% minus nav size*/
-        margin-left: 40px;
-        float: right;
-    }
-
-    .sidebar{
-        padding-top:20px;
-    }
-    /*lets nav bar to be showed on mouseover*/
-    nav.sidebar:hover + .main{
-        margin-left: 200px;
-    }
-
-    /*Center Brand*/
-    nav.sidebar.navbar.sidebar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
-        margin-left: 0px;
-    }
-    /*Center Brand*/
-    nav.sidebar .navbar-brand, nav.sidebar .navbar-header{
-        text-align: center;
-        width: 100%;
-        margin-left: 0px;
-    }
-
-    /*Center Icons*/
-    nav.sidebar a{
-        padding-right: 13px;
-    }
-
-    /*adds border top to first nav box */
-    nav.sidebar .navbar-nav > li:first-child{
-        border-top: 1px #e5e5e5 solid;
-    }
-
-    /*adds border to bottom nav boxes*/
-    nav.sidebar .navbar-nav > li{
-        border-bottom: 1px #e5e5e5 solid;
-    }
-
-    /* Colors/style dropdown box*/
-    nav.sidebar .navbar-nav .open .dropdown-menu {
-        position: static;
-        float: none;
-        width: auto;
-        margin-top: 0;
-        background-color: transparent;
-        border: 0;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
-
-    /*allows nav box to use 100% width*/
-    nav.sidebar .navbar-collapse, nav.sidebar .container-fluid{
-        padding: 0 0px 0 0px;
-    }
-
-    /*colors dropdown box text */
-    .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
-        color: #777;
-    }
-
-    /*gives sidebar width/height*/
-    nav.sidebar{
-        width: 200px;
-        margin-left: -160px;
-        float: left;
-        z-index: 8000;
-        margin-bottom: 0px;
-    }
-
-    /*give sidebar 100% width;*/
-    nav.sidebar li {
-        width: 100%;
-    }
-
-    /* Move nav to full on mouse over*/
-    nav.sidebar:hover{
-        margin-left: 0px;
-    }
-    /*for hiden things when navbar hidden*/
-    .forAnimate{
-        opacity: 0;
-    }
+.form-control::-moz-placeholder {
+    color:lightgray;
+    font-size:18px;
 }
-
-/* .....NavBar: Fully showing nav bar..... */
-
-@media (min-width: 1330px) {
-
-    /*Allow main to be next to Nav*/
-    .main{
-        width: calc(100% - 200px); /*keeps 100% minus nav size*/
-        margin-left: 200px;
-    }
-
-    /*Show all nav*/
-    nav.sidebar{
-        margin-left: 0px;
-        float: left;
-    }
-    /*Show hidden items on nav*/
-    nav.sidebar .forAnimate{
-        opacity: 1;
-    }
-}
-
-nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover, nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
-    color: #CCC;
-    background-color: transparent;
-}
-
-nav:hover .forAnimate{
-    opacity: 1;
-}
-section{
-    padding-left: 15px;
+.form-control:-ms-input-placeholder {
+    color:lightgray;
+    font-size:18px;
 }
