--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -91,12 +91,15 @@ input::-webkit-input-placeholder {
  	margin: 0 auto;
  	max-width: 700px;
     padding: 10px 40px;
-	background:#009edf;
+	background:#2D2E2E;
 	    color: #FFF;
     text-shadow: none;
 	-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
--moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
+    -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
+    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
+    background: rgb(231, 221, 221); /* This is for ie8 and below */
+    background: rgba(231, 219, 219, 0.5); 
+  
 
 }
 span.input-group-addon i {
