--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,11 +1,12 @@
-
-<div class="jumbotron jumbotron-fluid">
+<navbar [isLogged]="false"></navbar>
+<div  class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-3">ShareGames</h1>
       <p class="lead">Etant des joueurs de jeux vidéos,
           on arrive à se lasser assez rapidement d'un jeu qu'on possède. 
           Et le but de notre application, c'est de créer une communauté de joueurs pour différentes plateformes 
           (Playstation, Xbox, PC ...) les mettre en relation et leurs permettre l'échange de jeux vidéos au sein. 
-         Tout ça en proposant une interface agréable et facile d'utilisation.</p>
+         Tout ça en proposant une interface agréable et facile d'utilisation {{isLogged}}.</p>
     </div>
   </div>
+  
