--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-
+    <navbar [isLogged]="true"></navbar>
 	<div class="row">
 		<div class="full-width bg-transparent">
         <h1 class="text-center color">Custom Input file Upload</h1>
