--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -1,3 +1,4 @@
+<navbar [isLogged]="true"></navbar>
 <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-6">
