--- a/src/app/myGames/myGames.component.html
+++ b/src/app/myGames/myGames.component.html
@@ -1,4 +1,4 @@
-
+<navbar [isLogged]="true"></navbar>
     <div class="container">
             <div class="row">
                 <div class="col-md-4">
