--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -28,6 +28,9 @@
   .navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
     background-color: #69899f;
   }
+  .badge{
+    background-color: #6D0C0C;
+  }
   
  
  
