--- a/src/app/admin/home/home.component.html
+++ b/src/app/admin/home/home.component.html
@@ -1,188 +1,1 @@
-<div id="top-nav" class="navbar navbar-inverse navbar-static-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Dashboard</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i> Admin <span class="caret"></span></a>
-                        <ul id="g-account-menu" class="dropdown-menu" role="menu">
-                            <li><a href="#">My Profile</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#"><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
-                </ul>
-            </div>
-        </div>
-        <!-- /container -->
-    </div>
-    <!-- /Header -->
-    
-    <!-- Main -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-3">
-                <!-- Left column -->
-                <a href="#"><strong><i class="glyphicon glyphicon-wrench"></i> Tools</strong></a>
-    
-                <hr>
-    
-                <ul class="nav nav-stacked">
-                        <ul class="nav nav-stacked collapse in" id="userMenu">
-                            <li class="active"> <a href="#"><i class="glyphicon glyphicon-home"></i> Home</a></li>
-                            <li><a href="#"><i class="glyphicon glyphicon-envelope"></i> Messages <span class="badge badge-info">4</span></a></li>
-                        </ul>
-                </ul>
-    
-                <hr>
-            </div>
-            <!-- /col-3 -->
-            <div class="col-sm-9">
-    
-                <!-- column 2 -->
-                <ul class="list-inline pull-right">
-                    <li><a href="#"><i class="glyphicon glyphicon-cog"></i></a></li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-comment"></i><span class="count">3</span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">1. Is there a way..</a></li>
-                            <li><a href="#">2. Hello, admin. I would..</a></li>
-                            <li><a href="#"><strong>All messages</strong></a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#"><i class="glyphicon glyphicon-user"></i></a></li>
-                    <li><a title="Add Widget" data-toggle="modal" href="#addWidgetModal"><span class="glyphicon glyphicon-plus-sign"></span> Add Widget</a></li>
-                </ul>
-                <a href="#"><strong><i class="glyphicon glyphicon-dashboard"></i> My Dashboard</strong></a>
-                <hr>
-    
-                <div class="row">
-                    <!-- center left-->
-                    <div class="col-md-6">
-                        <div class="well">Inbox Messages <span class="badge pull-right">3</span></div>
-    
-                        <hr>
-    
-                        <div class="btn-group btn-group-justified">
-                            <a href="#" class="btn btn-primary col-sm-3">
-                                <i class="glyphicon glyphicon-plus"></i>
-                                <br> Service
-                            </a>
-                            <a href="#" class="btn btn-primary col-sm-3">
-                                <i class="glyphicon glyphicon-cloud"></i>
-                                <br> Cloud
-                            </a>
-                            <a href="#" class="btn btn-primary col-sm-3">
-                                <i class="glyphicon glyphicon-cog"></i>
-                                <br> Tools
-                            </a>
-                            <a href="#" class="btn btn-primary col-sm-3">
-                                <i class="glyphicon glyphicon-question-sign"></i>
-                                <br> Help
-                            </a>
-                        </div>
-    
-                        <hr>
-    
-                        <!--tabs-->
-                        <div class="panel">
-                            <ul class="nav nav-tabs" id="myTab">
-                                <li class="active"><a href="#profile" data-toggle="tab">Profile</a></li>
-                                <li><a href="#messages" data-toggle="tab">Messages</a></li>
-                                <li><a href="#settings" data-toggle="tab">Settings</a></li>
-                            </ul>
-                            <div class="tab-content">
-                                <div class="tab-pane active well" id="profile">
-                                    <h4><i class="glyphicon glyphicon-user"></i></h4> Lorem profile dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
-                                    <p>Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis dolor, in sagittis nisi.</p>
-                                </div>
-                                <div class="tab-pane well" id="messages">
-                                    <h4><i class="glyphicon glyphicon-comment"></i></h4> Message ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
-                                    <p>Quisque mauris augu.</p>
-                                </div>
-                                <div class="tab-pane well" id="settings">
-                                    <h4><i class="glyphicon glyphicon-cog"></i></h4> Lorem settings dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
-                                    <p>Quisque mauris augue, molestie.</p>
-                                </div>
-                            </div>
-    
-                        </div>
-                        <!--/tabs-->
-    
-                        <hr>
-                    </div>
-                    <!--/col-->
-                    <div class="col-md-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4>Notices</h4></div>
-                            <div class="panel-body">
-                                <div class="alert alert-info">
-                                    <button type="button" class="close" data-dismiss="alert">×</button>
-                                    This is a dismissable alert.. just sayin'.
-                                </div>
-                                <p>This is a dashboard-style layout that uses Bootstrap 3. You can use this template as a starting point to create something more unique.</p>
-                                <p>Visit the Bootstrap Playground at <a href="http://bootply.com">Bootply</a> to tweak this layout or discover more useful code snippets.</p>
-                            </div>
-                        </div>
-                        <div class="table-responsive">
-                            <table class="table table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>Visits</th>
-                                        <th>ROI</th>
-                                        <th>Source</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>45</td>
-                                        <td>2.45%</td>
-                                        <td>Direct</td>
-                                    </tr>
-                                    <tr>
-                                        <td>289</td>
-                                        <td>56.2%</td>
-                                        <td>Referral</td>
-                                    </tr>
-                                    <tr>
-                                        <td>98</td>
-                                        <td>25%</td>
-                                        <td>Type</td>
-                                    </tr>
-                                    <tr>
-                                        <td>..</td>
-                                        <td>..</td>
-                                        <td>..</td>
-                                    </tr>
-                                    <tr>
-                                        <td>..</td>
-                                        <td>..</td>
-                                        <td>..</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-
-                        <!--/panel-->
-    
-                        <!--/panel-->
-    
-                    </div>
-                    <!--/col-span-6-->
-    
-                </div>
-                <!--/row-->
-    
-                <hr>
-        
-            </div>
-            <!--/col-span-9-->
-        </div>
-    </div>
-    <!-- /Main -->
+<navbar-admin></navbar-admin>
