--- a/src/app/admin/navbar/navbar.component.css
+++ b/src/app/admin/navbar/navbar.component.css
@@ -1,35 +1,207 @@
-.navbar-static-top {
-    margin-bottom:20px;
-  }
-  
-  i {
-    font-size:16px;
-  }
-  
-  .nav > li > a {
-    color:#787878;
-  }
-    
-  footer {
-    margin-top:20px;
-    padding-top:20px;
-    padding-bottom:20px;
-    background-color:#efefef;
-  }
-  
-  /* count indicator near icons */
-  .nav>li .count {
-    position: absolute;
-    bottom: 12px;
-    right: 6px;
-    font-size: 9px;
-    background: rgba(51,200,51,0.55);
-    color: rgba(255,255,255,0.9);
-    line-height: 1em;
-    padding: 2px 4px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    border-radius: 10px;
-  }
+.dropdown-menu li:hover .sub-menu {
+  visibility: visible;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+.dropdown ul a:hover {
+  color : blue;
+}
+
+.navbar-default {
+  background-color: #69899f;
+  border-color: #425766;
+}
+
+.navbar-default .navbar-nav > li > .dropdown-menu {
+  background-color: #69899f;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
+  color: #d7e2e9;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
+  color: #e5dbdb;
+  background-color: #425766;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
+  background-color: #69899f;
+}
+.badge{
+  background-color: #6D0C0C;
+}
+
+.row{
+  margin-left:0px;
+  margin-right:0px;
+}
+
+#wrapper {
+  padding-left: 70px;
+  transition: all .4s ease 0s;
+  height: 100%;
+  position : fixed;
+}
+
+#sidebar-wrapper {
+  margin-left: -150px;
+  left: 70px;
+  width: 150px;
+  background: #222;
+  position: fixed;
+  height: 100%;
+  z-index: 10000;
+  transition: all .4s ease 0s;
+}
+
+#page-content-wrapper {
+  padding-left: 0;
+  margin-left: 0;
+  width: 100%;
+  height: auto;
+}
+#wrapper.active {
+  padding-left: 150px;
+}
+#wrapper.active #sidebar-wrapper {
+  left: 150px;
+}
+
+#page-content-wrapper {
+width: 100%;
+}
+
+#sidebar_menu li a, .sidebar-nav li a {
+  color: #999;
+  display: block;
+  float: left;
+  text-decoration: none;
+  width: 150px;
+  background: #252525;
+  border-top: 1px solid #373737;
+  border-bottom: 1px solid #1A1A1A;
+  -webkit-transition: background .5s;
+  -moz-transition: background .5s;
+  -o-transition: background .5s;
+  -ms-transition: background .5s;
+  transition: background .5s;
+}
+.sidebar_name {
+  padding-top: 25px;
+  color: #fff;
+  opacity: .7;
+}
+
+.sidebar-nav li {
+line-height: 40px;
+text-indent: 20px;
+}
+
+
+
+.sidebar-nav li a:hover {
+color: #fff;
+background: rgba(255,255,255,0.2);
+text-decoration: none;
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+height: 65px;
+line-height: 60px;
+font-size: 18px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+color: #fff;
+background: none;
+}
+
+
+
+#main_icon
+{
+  float:right;
+ padding-right: 25px;
+ padding-top:20px;
+}
+.sub_icon
+{
+  float:right;
+ padding-right: 25px;
+ padding-top:10px;
+}
+.content-header {
+height: 65px;
+line-height: 65px;
+}
+
+.content-header h1 {
+margin: 0;
+margin-left: 20px;
+line-height: 65px;
+display: inline-block;
+}
+
+@media (max-width:767px) {
+#wrapper {
+  padding-left: 70px;
+  transition: all .4s ease 0s;
+  margin-left:10px;
+  min-width: 250px;
+}
+
+#wrapper.active {
+  padding-left: 150px;
+}
+#wrapper.active #sidebar-wrapper {
+  left: 150px;
+  width: 250px;
+  transition: all .4s ease 0s;
+}
+}
+
+#sidebar-wrapper {
+  margin-left: -150px;
+  left: 70px;
+  width: 250px;
+  background: #222;
+  position: fixed;
+  height: 100%;
+  z-index: 10000;
+  transition: all .4s ease 0s;
+}
+
+.sidebar-nav{
+  display: block;
+  float: left;
+  width: 250px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+
+#sidebar_menu li a, .sidebar-nav li a{
+  color: #999;
+  display: block;
+  float: left;
+  text-decoration: none;
+  width: 250px;
+  background: #252525;
+  border-top: 1px solid #373737;
+  border-bottom: 1px solid #1A1A1A;
+  transition: background .5s;
+}
+
+
+
