--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,8 +17,20 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li *ngIf="isLogged"><a ><span class="glyphicon glyphicon-bell"></span></a></li>
-            <li *ngIf="isLogged"><a ><span class="glyphicon glyphicon-envelope"></span></a></li>            
+            <li *ngIf="isLogged"class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-bell"></span><span class="badge">3</span></a>
+              <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">.........</a></li>
+                  <li><a href="#">.........</a></li>
+                  <li><a href="#"><strong>All notifications</strong></a></li>
+              </ul>
+            </li> 
+            <li *ngIf="isLogged"class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-comment"></span><span class="badge">3</span></a>
+              <ul class="dropdown-menu" role="menu">
+                  <li><a href="#">1. Is there a way..</a></li>
+                  <li><a href="#">2. Hello, admin. I would..</a></li>
+                  <li><a href="#"><strong>All messages</strong></a></li>
+              </ul>
+            </li>          
             <li *ngIf="!isLogged"><a routerLink="/signup" routerLinkActive="active">Inscription</a></li>
             <li *ngIf="!isLogged"><a href="#" data-toggle="modal" data-target="#loginModal">Connexion</a></li>
             <li *ngIf="isLogged" class="dropdown">
