--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -58,7 +58,7 @@
     </div>
   </nav>
 <!-- nabar vertical-->
-<div class="col-lg-5">
+<div class="col-xs-3 col-xs-pull-1">
   <div id="wrapper" class="active ">  
     <div id="sidebar-wrapper">
         <ul id="sidebar_menu" class="sidebar-nav">
@@ -67,8 +67,8 @@
         <ul class="sidebar-nav" id="sidebar">
           <li><a >Profile</a></li>
           <li><a>Messagerie</a></li>
-          <li><a>Utilisateurs</a></li>
-          <li><a>Jeux</a></li>
+          <li><a >Utilisateurs</a></li>
+          <li><a routerLink="/admin/games">Jeux</a></li>
           <li><a>Historique</a></li>
           <li><a>Parametres</a></li>
         </ul>
