--- a/src/app/searchGame/searchGames.component.css
+++ b/src/app/searchGame/searchGames.component.css
@@ -42,7 +42,7 @@
 }
 
 :host >>> .completer-row
-{ display: inherit; background:blue; }
+{ display: inherit; }
 
 :host >>> .completer-selected-row {
     background-color: lightblue;
