--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -42,7 +42,7 @@
                         <div class="col-md-12 control">
                             <div style="border-top: 1px solid#EE0A0A; padding-top:15px; font-size:85%" >
                                   Vous n'avez pas de compte! 
-                                  <a href="/signup">Inscriez vous ici</a>
+                                  <a href="/signup">Inscrivez vous ici</a>
                             </div>
                           </div>
                     </div> 
