--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,4 +1,4 @@
-<navbar [isLogged]="true"></navbar>
+<navbar [isLogged]="true" [user]="user"></navbar>
 <div class="main_section">
    <div class="container">
       <div class="chat_container">
