--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -35,17 +35,19 @@
             <li *ngIf="!isLogged"><a href="#" data-toggle="modal" data-target="#loginModal">Connexion</a></li>
             <li *ngIf="isLogged" class="dropdown">
                 <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                 Prenom
+                 {{user.firstName}}
                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="#">Mon profile</a></li>
+                    <li><a [routerLink]="['/users',user.id,'profile']">Mon profile</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">Messagerie</a></li>
+                  <li><a [routerLink]="['/users',user.id,'messages']">Messagerie</a></li>
                   <li role="separator" class="divider"></li> 
-                  <li><a href="#">Historique</a></li>
+                  <li><a [routerLink]="['/users',user.id,'games']">Mes jeux</a></li>
                   <li role="separator" class="divider"></li> 
-                  <li><a href="#">Déconnexion</a></li>
+                  <li><a [routerLink]="['/users',user.id,'historique']">Historique</a></li>
+                  <li role="separator" class="divider"></li> 
+                  <li><a href="">Déconnexion</a></li>
                 </ul>
               </li>            
           </ul>
