--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-    <navbar [isLogged]="true"></navbar>
+    <navbar [isLogged]="true" [user]="user"></navbar>
 	<div class="container">
             <div class="row">
                 <div class="full-width bg-transparent">
