--- a/src/app/searchGame/searchGames.component.html
+++ b/src/app/searchGame/searchGames.component.html
@@ -10,14 +10,16 @@
             [ngModelOptions]="{standalone: true}"
             [datasource]="dataService"
             [minSearchLength]="0"
-             ></ng2-completer>
+            (ngModelChange)="refreshData()" 
+            ></ng2-completer>
 
           </div>
           <div class="form-group col-lg-2 col-md-2 col-sm-2 col-xs-12">
-              <button type="submit" class="btn btn-warning btn-custom">Recherche</button>
+              <button (click) = "searchDetails(searchStr)" class="btn btn-warning btn-custom">Recherche</button>
             </div>
     </div> 
   </div> 
+  {{searchData|json}}
 
 
   
